SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/CPQ_Playbook__c.object-meta.xml
<CustomObject>
    <description>Set of deal questions for CPQ quote generation. Unique path for different opportunity types</description>
    <label>CPQ Playbook</label>
    <nameField>
        <label>CPQ Playbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>