SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Contract_View_Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>Contract_View_Display_Fields__c</fullName>
    <description>List of Contract Field API names to be shown in CPQ when viewing a Contract records configuration.</description>
    <inlineHelpText>List of Contract Field API names to be shown in CPQ when viewing a Contract records configuration.</inlineHelpText>
    <label>Contract View Display Fields</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>