SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Default_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Default_Term_in_Months__c</fullName>
    <description>Default term of quote in months</description>
    <inlineHelpText>Default term of quote in months</inlineHelpText>
    <label>Default Term (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>