SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/End_Date_Editable__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if user can manually adjust the end date of the quote in CPQ</description>
    <inlineHelpText>Determines if user can manually adjust the end date of the quote in CPQ. NOTE: End Date is always locked for Contract Amendments</inlineHelpText>
    <label>End Date Editable</label>
    <type>Checkbox</type>
</CustomField>