SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Entitlement_Summary_Columns__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Summary_Columns__c</fullName>
    <description>Semicolon delineated list of field API names on the Contract_Entitlement__c object to be shown in the Entitlement Summary view in CPQ. Any Contract_Entitlement__c Custom Field API names are supported.</description>
    <inlineHelpText>Semicolon delineated list of field API names on the Contract_Entitlement__c object to be shown in the Entitlement Summary view in CPQ. Any Contract_Entitlement__c Custom Field API names are supported.</inlineHelpText>
    <label>Entitlement Summary Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>