SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Entitlement_Summary_Sort_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Summary_Sort_By_Default__c</fullName>
    <description>Default Entitlement Column to sort entitlements by</description>
    <inlineHelpText>Default Entitlement Column to sort entitlements by</inlineHelpText>
    <label>Entitlement Summary Sort By Default</label>
    <length>100</length>
    <type>Text</type>
</CustomField>