SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if playbook is active and should appear in CPQ</description>
    <inlineHelpText>Determines if playbook is active and should appear in CPQ</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>