SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Displayed label in CPQ</description>
    <inlineHelpText>Displayed label Users see in CPQ</inlineHelpText>
    <label>Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>