SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pricebook used for products added in playbook</description>
    <inlineHelpText>Pricebook from which products are pulled from for rules</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>CPQ Playbooks</relationshipLabel>
    <relationshipName>CPQ_Playbooks</relationshipName>
    <type>Lookup</type>
</CustomField>