SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Product_Summary_Group_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary_Group_By_Default__c</fullName>
    <description>Default Product Column to group products by</description>
    <inlineHelpText>Default Product Column to group products by</inlineHelpText>
    <label>Product Summary Group By Default</label>
    <length>100</length>
    <type>Text</type>
</CustomField>