SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Product_Summary_Sort_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary_Sort_By_Default__c</fullName>
    <description>Default Product Column to sort products by</description>
    <inlineHelpText>Default Product Column to sort products by</inlineHelpText>
    <label>Product Summary Sort By Default</label>
    <length>100</length>
    <type>Text</type>
</CustomField>