SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Proposal_Footer__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Footer__c</fullName>
    <description>Footer display for Proposal PDF</description>
    <inlineHelpText>Footer display for Proposal PDF (Will not appear on the first page)</inlineHelpText>
    <label>Proposal Footer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>