SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Proposal_Header__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Header__c</fullName>
    <description>Header display for Proposal PDF</description>
    <inlineHelpText>Header display for Proposal PDF (Will not appear on the first page)</inlineHelpText>
    <label>Proposal Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>