SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Proposal_Header_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Header_Type__c</fullName>
    <description>Determines if Proposal Header will display from an attached image or from the rich text field</description>
    <inlineHelpText>Determines if Proposal Header will display from an attached image or from the rich text field</inlineHelpText>
    <label>Proposal Header Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>