SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Quote_View_Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>Quote_View_Display_Fields__c</fullName>
    <description>List of Quote Field API names to be shown in CPQ when viewing a Quote records configuration. Sections can be created by inputting a label preceded by the '#' character (e.g. #Header). Blank spaces can be created by inputting a value that is not a valid field API name.</description>
    <inlineHelpText>List of Quote Field API names to be shown in CPQ when viewing a Quote records configuration. Sections can be created by inputting a label preceded by the '#' character (e.g. #Header). Blank spaces can be created by inputting a value that is not a valid field API name.</inlineHelpText>
    <label>Quote View Display Fields</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>