SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Start_Date_Editable__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if user can manually adjust the start date of the quote in CPQ</description>
    <inlineHelpText>Determines if user can manually adjust the start date of the quote in CPQ</inlineHelpText>
    <label>Start Date Editable</label>
    <type>Checkbox</type>
</CustomField>