SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook__c/fields/Term_Editable__c.field-meta.xml
<CustomField>
    <fullName>Term_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if user can manually adjust the term (in months) of the quote in CPQ</description>
    <inlineHelpText>Determines if user can manually adjust the term (in months) of the quote in CPQ</inlineHelpText>
    <label>Term Editable</label>
    <type>Checkbox</type>
</CustomField>